public interface IDance
{
    void Spin();
    void DoTheCaterpillar();
    void Jump();
}
